5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1680_1949.log
== TEST (2019-04-30 16:30:33) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
j10 = j/10 
rj= j%10
l10 = l/10
rl = l%10

if(j == l):
	print("Ganhou R$ 100.000,00")
elif(j10 == rl) and (rj == l10):
	print("Ganhou R$ 100.000,00")
elif(j10 == l10) or (j10 == rl) or (rj == l10) or (rj == rl):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:30:58) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
j10 = j/10 
rj= j%10
l10 = l/10
rl = l%10

if(j == l):
	print("Ganhou R$ 100.000,00")
elif(j10 == rl) and (rj == l10):
	print("Ganhou R$ 100.000,00")
elif(j10 == l10) or (j10 == rl) or (rj == l10) or (rj == rl):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:32:09) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
j10 = j/10 
rj= j%10
l10 = l/10
rl = l%10
print(j10, rj, l10, rl)
if(j == l):
	print("Ganhou R$ 100.000,00")
elif(j10 == rl) and (rj == l10):
	print("Ganhou R$ 100.000,00")
elif(j10 == l10) or (j10 == rl) or (rj == l10) or (rj == rl):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
5.5 5 5.5 5
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:32:33) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
j10 = j//10 
rj= j%10
l10 = l//10
rl = l%10
print(j10, rj, l10, rl)
if(j == l):
	print("Ganhou R$ 100.000,00")
elif(j10 == rl) and (rj == l10):
	print("Ganhou R$ 100.000,00")
elif(j10 == l10) or (j10 == rl) or (rj == l10) or (rj == rl):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
5 5 5 5
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:33:13) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
j10 = j//10 
rj= j%10
l10 = l//10
rl = l%10
print(j10, rj, l10, rl)
if(j == l):
	print("Ganhou R$ 100.000,00")
elif(j10 == rl) and (rj == l10):
	print("Ganhou R$ 50.000,00")
elif(j10 == l10) or (j10 == rl) or (rj == l10) or (rj == rl):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
5 5 5 5
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:33:26) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
j10 = j//10 
rj= j%10
l10 = l//10
rl = l%10
print(j10, rj, l10, rl)
if(j == l):
	print("Ganhou R$ 100.000,00")
elif(j10 == rl) and (rj == l10):
	print("Ganhou R$ 50.000,00")
elif(j10 == l10) or (j10 == rl) or (rj == l10) or (rj == rl):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
5 5 5 5
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:33:45) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
j10 = j//10 
rj= j%10
l10 = l//10
rl = l%10
print(j10, rj, l10, rl)
if(j == l):
	print("Ganhou R$ 100.000,00")
elif(j10 == rl) and (rj == l10):
	print("Ganhou R$ 50.000,00")
elif(j10 == l10) or (j10 == rl) or (rj == l10) or (rj == rl):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
5 5 5 5
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:33:59) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
j10 = j//10 
rj= j%10
l10 = l//10
rl = l%10
print(j10, rj, l10, rl)
if(j == l):
	print("Ganhou R$ 100.000,00")
elif(j10 == rl) and (rj == l10):
	print("Ganhou R$ 50.000,00")
elif(j10 == l10) or (j10 == rl) or (rj == l10) or (rj == rl):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.147875
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
5 5 5 5
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
7 8 8 9
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
1 2 5 6
Perdeu
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:34:16) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
j10 = j//10 
rj= j%10
l10 = l//10
rl = l%10
print(j10, rj, l10, rl)
if(j == l):
	print("Ganhou R$ 100.000,00")
elif(j10 == rl) and (rj == l10):
	print("Ganhou R$ 50.000,00")
elif(j10 == l10) or (j10 == rl) or (rj == l10) or (rj == rl):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
5 5 5 5
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:38:19) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
print(j10, rj, l10, rl)
if(j == l):
	print("Ganhou R$: 100.000,00")
elif(j10 == rl) and (rj == l10):
	print("Ganhou R$ 50.000,00")
elif(j10 == l10) or (j10 == rl) or (rj == l10) or (rj == rl):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.156553
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/1949/main.py", line 4, in <module>
    print(j10, rj, l10, rl)
NameError: name 'j10' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:38:47) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
j10 = j//10 
rj= j%10
l10 = l//10
rl = l%10

if(j == l):
	print("Ganhou R$: 100.000,00")
elif(j10 == rl) and (rj == l10):
	print("Ganhou R$ 50.000,00")
elif(j10 == l10) or (j10 == rl) or (rj == l10) or (rj == rl):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.175618
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$: 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:43:41) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
dj = j//10 
uj= j%10
dl = l//10
ul = l%10

if(j == l):
	print("Ganhou R$: 100.000,00")
elif(dj == ul) and (uj == dl):
	print("Ganhou R$ 50.000,00")
elif(dj == dl) or (dj == ul) or (uj == dl) or (uj == ul):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$: 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:43:53) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
dj = j//10 
uj= j%10
dl = l//10
ul = l%10

if(j == l):
	print("Ganhou R$: 100.000,00")
elif(dj == ul) and (uj == dl):
	print("Ganhou R$ 50.000,00")
elif(dj == dl) or (dj == ul) or (uj == dl) or (uj == ul):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$: 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:44:03) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
dj = j//10 
uj= j%10
dl = l//10
ul = l%10

if(j == l):
	print("Ganhou R$: 100.000,00")
elif(dj == ul) and (uj == dl):
	print("Ganhou R$ 50.000,00")
elif(dj == dl) or (dj == ul) or (uj == dl) or (uj == ul):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$: 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:44:21) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
dj = j//10 
uj= j%10
dl = l//10
ul = l%10

if(j == l):
	print("Ganhou R$: 100.000,00")
elif(dj == ul) and (uj == dl):
	print("Ganhou R$ 50.000,00")
elif(dj == dl) or (dj == ul) or (uj == dl) or (uj == ul):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$: 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:44:31) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
dj = j//10 
uj= j%10
dl = l//10
ul = l%10

if(j == l):
	print("Ganhou R$: 100.000,00")
elif(dj == ul) and (uj == dl):
	print("Ganhou R$ 50.000,00")
elif(dj == dl) or (dj == ul) or (uj == dl) or (uj == ul):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$: 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:50:19) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
dj = j//10 
uj= j%10
dl = l//10
ul = l%10

if(j == l):
	print("Ganhou R$: 100.000,00")
elif(dj == ul) and (uj == dl):
	print("Ganhou R$ 50.000,00")
elif(dj == dl) or (dj == ul) or (uj == dl) or (uj == ul):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$: 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:50:59) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
dj = j//10 
uj= j%10
dl = l//10
ul = l%10

if(j == l):
	print("Ganhou R$: 100.000,00")
elif(dj == ul) and (uj == dl):
	print("Ganhou R$ 50.000,00")
elif(dj == dl) or (dj == ul) or (uj == dl) or (uj == ul):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$: 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:51:11) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
dj = j//10 
uj= j%10
dl = l//10
ul = l%10

if(j == l):
	print("Ganhou R$: 100.000,00")
elif(dj == ul) and (uj == dl):
	print("Ganhou R$ 50.000,00")
elif(dj == dl) or (dj == ul) or (uj == dl) or (uj == ul):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$: 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:51:31) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l  = int(input("digite um numero com dois digitos: "))
dj = j//10 
uj= j%10
dl = l//10
ul = l%10

if(j == l):
	print("Ganhou R$: 100.000,00")
elif(dj == ul) and (uj == dl):
	print("Ganhou R$ 50.000,00")
elif(dj == dl) or (dj == ul) or (uj == dl) or (uj == ul):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$: 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:58:00) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l = int(input("digite um numero com dois digitos: "))
dj = j//10 
uj = j%10
dl = l//10
ul = l%10

if(j == l):
	print("Ganhou R$: 100.000,00")
elif(uj == dl) and (dj == ul):
	print("Ganhou R$ 50.000,00")
elif(dj == dl) or (dj == ul) or (uj == dl) or (uj == ul):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.203241
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$: 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:59:09) 
-- CODE:
#Leitura dos numeros apostados pelo jogador com dois digitos:
j = int(input("digite um numero com dois digitos: "))
l = int(input("digite um numero com dois digitos: "))
dj = j//10 
uj = j%10
dl = l//10
ul = l%10

if(j == l):
	print("Ganhou R$ 100.000,00")
elif(uj == dl) and (dj == ul):
	print("Ganhou R$ 50.000,00")
elif(dj == dl) or (dj == ul) or (uj == dl) or (uj == ul):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.138279
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
